# outdoorsy

./: .gitignore  LICENSE  README.md  app.py  cli.py  database.py  main.py  outdoorsy.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  app.py
src/outdoorsy/: __init__.py  app.py  database.py
tests/: test_outdoorsy.py
