[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outdoorsy"
authors = [
  { name="Rachael Crook", email="rachaelc@linux.com" },
]
description = "A demo command line tool for displaying information from a comma or pipe delimited file from a fictional Company named Outdoor.sy"
readme = "README.md"
license = { file="LICENSE" }
keywords = ["outdoorsy command line tool csv pipe delimited demo argparse hatchling hatch"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "colorama>=0.4.5",
  "tabulate>=0.8.10",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/rachaelcrook/outdoorsy#readme"
Issues = "https://github.com/rachaelcrook/outdoorsy/issues"
Source = "https://github.com/rachaelcrook/outdoorsy"

[project.scripts]
outdoorsy = "outdoorsy:main"

[tool.hatch.version]
path = "src/outdoorsy/app.py"